[package]
name = "rust"
version = "0.1.0"
authors = ["Niraj Sapkota <n.sapkota@outlook.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
